--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -20,7 +20,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Strona główna</a>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ROLE_ADMIN')">
                     <a class="nav-link" href="/account">Konto</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
