--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -79,9 +79,9 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Rezygnuję</button>
+                <button type="button" class="btn btn-md btn-secondary" data-bs-dismiss="modal">Rezygnuję</button>
                 <form id="form-accept">
-                    <button class="btn btn-sm btn-primary" type="submit">Potwierdzam</button>
+                    <button class="btn btn-md btn-primary" type="submit">Potwierdzam</button>
                 </form>
             </div>
         </div>
