--- a/JavaPRO/src/main/resources/templates/adminPanel.html
+++ b/JavaPRO/src/main/resources/templates/adminPanel.html
@@ -31,7 +31,7 @@
         <thead class="thead-dark text-center">
         <tr>
             <th class="table-center" scope="col">Nazwa</th>
-            <th class="table-center" scope="col">Nr albumu tudenta</th>
+            <th class="table-center" scope="col">Nr albumu studenta</th>
             <th class="table-center" scope="col">Plik</th>
             <th class="table-center" scope="col">Ocena</th>
         </tr>
