--- a/JavaPRO/src/main/resources/templates/register.html
+++ b/JavaPRO/src/main/resources/templates/register.html
@@ -25,30 +25,57 @@
 </div>
 
 <!--Panel rejestracji-->
-<div class="text-center">
+<div>
+<!--Komunikaty-->
+    <!--Ikony do alertów-->
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+        </symbol>
+        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+        </symbol>
+    </svg>
+    <!--Alerty-->
+    <div th:if="${registerSuccess}" class="success alert alert-success d-flex align-items-center justify-content-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+        <div>
+            Rejestracja przebiegła pomyślnie!
+        </div>
+    </div>
+    <div th:if="${passwordNotMatch}" class="error alert alert-warning d-flex align-items-center justify-content-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+        <div>
+            Podano różne hasła.
+        </div>
+    </div>
+    <div th:if="${registerFailed}" class="error alert alert-danger d-flex align-items-center justify-content-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+        <div>
+            Nie udało się zarejestrować użytkownika.
+        </div>
+    </div>
+
+    <!--Formularz rejestracyjny-->
     <form th:action="@{/register}" method="post"> <!-- tu chyba nie tak -->
-        <label class="sr-only" for="imie" ></label>
-        <input class="form-control" type="text" id="imie"  name="name" placeholder="Imię" required autofocus>
-        <label class="sr-only" for="nazwisko" ></label>
-        <input class="form-control mt-2" type="text" id="nazwisko"  name="surname" placeholder="Nazwisko" required >
-        <label class="sr-only" for="email" ></label>
-        <input class="form-control mt-2" type="email" id="email"  name="email" placeholder="E-mail" required >
-        <label class="sr-only" for="nrAlbumu" ></label>
-        <input class="form-control mt-2" type="text" id="nrAlbumu"  name="nrAlbum" placeholder="Numer albumu" required >        <label class="sr-only" for="password" ></label>
-        <label for="password" class="sr-only"></label>
-        <input class="form-control mt-2" type="password" id="password" placeholder="Hasło" name="password" minlength="8" required>
-        <label for="password2" class="sr-only"></label>
-        <input class="form-control mt-2" type="password" id="password2" placeholder="Powtórz hasło" name="password2" minlength="8" required>
-        <div class="login-btn mt-3 mb-5">
+        <label class="sr-only" for="imie" >Imię:</label>
+        <input class="form-control mb-2 mt-1" type="text" id="imie"  name="name" placeholder="Podaj imię" required autofocus>
+        <label class="sr-only" for="nazwisko" >Nazwisko:</label>
+        <input class="form-control mb-2 mt-1" type="text" id="nazwisko"  name="surname" placeholder="Podaj nazwisko" required >
+        <label class="sr-only" for="email" >E-mail (z domeny PRz):</label>
+        <input class="form-control mb-2 mt-1" type="email" id="email"  name="email" placeholder="Podaj e-mail np. nrAlbumu@stud.prz.edu.pl"
+               pattern="[a-z0-9._%+-]+@+(stud\.prz\.edu\.pl|prz\.edu\.pl)" required>
+        <label class="sr-only" for="nrAlbumu">Numer albumu:</label>
+        <input class="form-control mb-2 mt-1" type="text" id="nrAlbumu"  name="nrAlbum" placeholder="Podaj numer albumu" required >        <label class="sr-only" for="password" ></label>
+        <label for="password" class="sr-only">Hasło:</label>
+        <input class="form-control mb-2 mt-1" type="password" id="password" placeholder="Podaj hasło" name="password" minlength="8" required>
+        <label for="password2" class="sr-only">Powtórz hasło:</label>
+        <input class="form-control mb-2 mt-1" type="password" id="password2" placeholder="Powtórz hasło" name="password2" minlength="8" required>
+        <div class="login-btn mt-3 mb-5 text-center">
             <button class="btn btn-lg btn-primary col-xs-6 col-sm-4">Zarejestruj</button>
         </div>
     </form>
-    <p th:if="${registerSuccess}" class="success">Rejestracja przebiegła pomyślnie!</p>
-    <p th:if="${registerFailed}" class="error">Nie udało się zarejestrować użytkownika</p>
-    <p th:if="${passwordNotMatch}" class="error">Podano różne hasła</p>
 </div>
-
-
 
 <!--Footer-->
 <div th:insert="footer"></div>
